first working version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 			<li class="divider"></li>
 			<li class="divider"></li>
 		  <li><%= link_to "Ask Question" %></li>
-			<li><%= link_to "Log Out", logout_path, method: :delete %></li>
+			<li><%# link_to "Log Out", logout_path, method: :delete %></li>
 		  
 		</ul>
 	  <div class="navbar-fixed">
