CRUD functionality for posts up and running as well as UJS for the removal of a post

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
+<div class="new_post_container">
+	<div class="new_post_form_wrapper">
+		<%= render 'post_form' %>
+	</div>
+</div>
+
