--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,6 @@
 				width: 100%;
 			}
     </style>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
   </head>
 
   <body>
@@ -57,7 +54,7 @@
 		          <li><a href="#">n00b 0verfl0w</a></li>
 		          </ul>
 		        </div>
-		        <div class="col s6">
+		        <div class="col s5">
 		          <form class="search-input">
 		            <div class="input-field">
 		            <input id="search" type="search" />
@@ -65,13 +62,13 @@
 		            </div>
 		          </form>
 		        </div>
-		        <div class="col s4">
+		        <div class="col s5">
 		          <ul class="right">
 		            <% if user_signed_in? %>
 		      				<li><a class="dropdown-button" href="#!" data-activates="user-dropdown"><%= current_user.username %>
 	      						<i class="material-icons right">arrow_drop_down</i></a>
 	      					</li>
-	      					<li> <%# link_to "Index", users_path %></li>
+	      					<li> <%= link_to "Questions", new_question_path %></li>
 	        			<% else %>
 	        				<li><%= link_to "Login", new_user_session_path %></li>
 		        			<li><%= link_to "Create Account", new_user_registration_path %></li>
@@ -82,8 +79,9 @@
 		    </div>
 		  </nav>
 		</div>
+		<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
-  <body>
     <%= yield %>
 
     <script>
