--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Questions#index</h1>
 <p>Find me in app/views/questions/index.html.erb</p>
+
+<div class="questions">
+
+	<% @questions.each do |question| %>
+		
+		<%= render :partial => "question", :locals => { :question => question } %>
+
+	<% end %>
+
+</div>
