--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Questions#show</h1>
 <p>Find me in app/views/questions/show.html.erb</p>
+
+
+<%= render :partial => "question", :locals => { :question => @question } %>
