added minor styling to posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,12 @@
-<body id="post_index_body">
-	<div class="post_wrapper">
-		<% @posts.all.reverse.each do |post| %>
-			<%= render post %>
-		<% end %>
-	</div>
-</body>
+<div class="row post_wrapper">
+	<% @posts.all.reverse.each do |post| %>
+		<div class="col s12 m6">
+			<div class="card hoverable">
+				<div class="card-content">
+					<%= render post %>
+				</div>
+			</div>
+		</div>
+	<% end %>
+</div>
+
