--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,18 +1,19 @@
 <div class="post_wrapper">
 	<div class="post_content">
-		<%= best_in_place_if post.user.id == current_user.id, post, :title, :as => :textarea %><br/>
-		<%= best_in_place_if post.user.id == current_user.id, post, :content, :as => :textarea %>
+		<%= post.title %><br/>
+		<%= post.content %>
+	<div>
 		<small>
 			Posted by
 			<%= post.user.username %>
 			<%= post.created_at.strftime("on %m/%d/%Y") %> 
 			<%= post.created_at.strftime("at %I:%M%p") %>
 		</small>
-		<div>
-			<% if post.user.id == current_user.id %>
-			<%= link_to "Edit Post", edit_post_path(post)  %>
-			<%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete'%>
-		<% end %>	
-		</div>
+	</div>
+	<div>
+		<% if post.user.id == current_user.id %>
+		<%= link_to "Edit Post", edit_post_path(post)  %>
+		<%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete'%>
+	<% end %>	</div>
 	</div>
 </div>
