--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,3 +3,25 @@
 
 
 <%= render :partial => "question", :locals => { :question => @question } %>
+
+<h5>Comments</h5>
+
+<div class="row">
+  <div class="col s12 m8">
+    <div class="card-panel white darken-3">
+      <span class="black-text">
+      	<%= form_for [@question, Comment.new], scope: 'comment', remote: true do |f| %>
+      		<%= f.hidden_field :user_id, value: @user.id %>
+					<%= f.text_area :content, placeholder: "Add a comment" %><br/><br/>
+					<%= f.submit 'Comment', :class => 'waves-effect waves-light btn comment', remote: true %>
+				<% end %>
+
+      </span>
+    </div>
+  </div>
+</div>
+
+<ul class="comments">
+  <%= render(partial: 'comments/comment', collection: @question.comments) %>
+</ul>
+
