--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -31,6 +31,9 @@
           </div>
 
           <div class="field">
+            <% if resource.present? %>
+              <%= image_tag resource.avatar.url(:thumb) %>
+            <% end %>
             <br />
             <%= f.label :avatar, "Pix0rz" %> <br />
             <%= f.file_field :avatar %> 
@@ -61,14 +64,14 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Update" %>
+          <%= f.submit "Update", :class => 'waves-effect waves-light btn' %>
         </div>
       <% end %>
 
-      <h3>Cancel my account</h3>
+      <h3>Delete my account</h3>
 
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
+      <%= link_to 'Delete Account <i class="tiny material-icons">delete</i>'.html_safe, registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => 'waves-effect waves-light btn red accent-4' %>
+        <br>
       <%= link_to "Back", :back %>
     </div>
   </div>
