--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col s9 offset-s2">
+			<div id="user_wrapper" class="card blue-grey lighten-5">
+				<div class="name_photo">
+					<h3><%= @user.username %></h3>
+					<% if @user.avatar? %>
+						<%= image_tag @user.avatar.url(:medium) %>
+					<% end %>
+				</div>
+				<div class="badges">
+					<!-- if we get here -->
+				</div>
+				<div class="aboot">
+					<ul>
+						<li>Questions Asked: <%= @user.questions.count  %></li>
+						<li>Answers Given: <%= @user.answers.count  %></li>
+						<li>Comments Made: <%= @user.comments.count  %></li>
+						<li>Current Reputation: <%= @user.reputation %></li>
+
+					</ul>
+						<% if @user.about? %>
+							<p> <b>About <%= @user.username %>:</b> <br>
+								<%= @user.about %>
+							</p>
+						<% end %>
+				</div>
+			</div>
+    </div>
+  </div>
+</div>
