all CRUD functionality for answers up and running including ujs for deleting and adding

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="post_wrapper">
 	<div class="post_content">
-		<%= post.title %><br/>
+		<%= post.title %>
 		<%= post.content %>
 	<div>
 		<small>
@@ -10,10 +10,11 @@
 			<%= post.created_at.strftime("at %I:%M%p") %>
 		</small>
 	</div>
-	<div>
-		<% if post.user.id == current_user.id %>
-		<%= link_to "Edit Post", edit_post_path(post)  %>
-		<%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete'%>
-	<% end %>	</div>
+		<div>
+			<% if post.user.id == current_user.id %>
+				<%= link_to "Edit Post", edit_post_path(post)  %>
+				<%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete'%>
+			<% end %>	
+		</div>
 	</div>
 </div>
