--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,29 +2,36 @@
   <div class="row">
     <div class="col s9 offset-s2">
 			<div id="user_wrapper" class="card blue-grey lighten-5">
-				<div class="name_photo">
-					<h3><%= @user.username %></h3>
-					<% if @user.avatar? %>
-						<%= image_tag @user.avatar.url(:medium) %>
-					<% end %>
-				</div>
-				<div class="badges">
-					<!-- if we get here -->
-				</div>
-				<div class="aboot">
-					<ul>
-						<li>Questions Asked: <%= @user.questions.count  %></li>
-						<li>Answers Given: <%= @user.answers.count  %></li>
-						<li>Comments Made: <%= @user.comments.count  %></li>
-						<li>Current Reputation: <%= @user.reputation %></li>
-
-					</ul>
-						<% if @user.about? %>
-							<p> <b>About <%= @user.username %>:</b> <br>
-								<%= @user.about %>
-							</p>
+				<!-- checks if the account has been soft deleted -->
+				<% if @user.deleted_at.nil? %>
+			
+					<div class="name_photo">
+						<h3><%= @user.username %></h3>
+						<% if @user.avatar? %>
+							<%= image_tag @user.avatar.url(:medium) %>
 						<% end %>
-				</div>
+					</div>
+					<div class="badges">
+						<!-- if we get here -->
+					</div>
+					<div class="aboot">
+						<ul>
+							<li>Questions Asked: <%= @user.questions.count  %></li>
+							<li>Answers Given: <%= @user.answers.count  %></li>
+							<li>Comments Made: <%= @user.comments.count  %></li>
+							<li>Current Reputation: <%= @user.reputation %></li>
+
+						</ul>
+							<% if @user.about? %>
+								<p> <b>About <%= @user.username %>:</b> <br>
+									<%= @user.about %>
+								</p>
+							<% end %>
+					</div>
+				<% else %>
+					<h3 class='user_has_deleted red-text'><%= @user.username %> has deleted their account</h3>
+				<% end %>
+
 			</div>
     </div>
   </div>
