comments are working for questions and posts

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,16 +1,36 @@
 <li style="padding-left: 4%;" class="comment">
+
   <div class="row">
     <div class="col s12 m8">
-      <div class="card grey">
+      <br>
+      <div class="card grey lighten-3">
+        <%= link_to "X", post_comment_path(comment.id, comment), method: :delete, class: "waves-effect waves-light chip close delete-comment right", remote: true %>
         <div class="card-content white black-text">
           <span class="card-title"><%= comment.user.username %></span>
-          <p><%= best_in_place_if comment.user.id == current_user.id, comment, :content, :as => :textarea %></p> 
+
+          <p>
+            <%= best_in_place_if comment.user.id == current_user.id, comment, :content, :as => :textarea %>
+          </p>
+
+          <hr>
+
+          <small class="col s12 m8">
+            Submitted <%= time_ago_in_words(comment.created_at) %> ago
+          </small>
+
         </div>
+        
         <div class="card-action">
-          <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago</small>
-          <button type="button" class="waves-effect waves-light btn reply-button right">Reply</button>
-          <small><%= link_to "Delete", post_comment_path(comment.id, comment), method: :delete, class: "waves-effect waves-light btn delete-comment", remote: true, style: "float: right;" %></small>
-          
+
+        <%= form_for [comment, Comment.new], remote: true do |f| %>
+          <div class="card-content  black-text comment-input">
+
+            <%= f.hidden_field :user_id, value: @user.id %>
+            <%= f.text_area :content, placeholder: "Add a Reply", class: 'white col s9', id: "comment-field" %>
+            <%= f.submit 'Reply', :class => 'waves-effect waves-light btn reply right col s2' %>
+          </div>
+        <% end %>
+        <br>
         </div>
       </div>
     </div>
@@ -18,15 +38,16 @@
   <div class="row reply-div" style="display: none;">
     <div class="card col s12 m8 grey lighten-3">
       <%= form_for [comment, Comment.new], remote: true do |f| %>
-        <div class="card-content  black-text">
+        <div class="card-content  black-text comment-input">
           
-          <%= f.text_area :content, placeholder: "Add a Reply", class: 'white' %><br/>
+          <%= f.text_area :content, placeholder: "Add a Reply", class: 'white', id: "comment-field" %><br/>
           <%= f.hidden_field :user_id, value: @user.id %>
           <%= f.submit 'Reply', :class => 'waves-effect waves-light btn reply' %>
         </div>
       <% end %>
     </div>
   </div>
+  
 
 
   <ul>
@@ -35,14 +56,3 @@
 
 </li>
 
-<script>
-  $(".reply-button").on('click', function() {
-    $(this).hide();
-    $(".reply-div").show();
- });
-
-  $(".reply").on('click', function() {
-    $(".reply-button").show();
-    $(".reply-div").hide();
- });
-</script>
