--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,32 +1,24 @@
 <div class="row post_wrapper">
 	<% current_user.posts.all.reverse.each do |post| %>
-		<div class="col s12 m6">
+		<div class="col s12 m10">
 			<div class="card hoverable">
 				<div class="card-content">
 						<%= render post %>
+				</div>
+				<div class="row card-panel grey lighten-3">
+	      	<%= form_for [@post, Comment.new], scope: 'comment', remote: true do |f| %>
+	      		<%= f.hidden_field :user_id, value: @user.id %>
+						<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
+	      		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
+						
+					<% end %>
 				</div>
 			</div>
 		</div>
 	<% end %>
 </div>
 
-
-<h3>Comments</h3>
-
-<div class="row">
-  <div class="col s12 m8">
-    <div class="card-panel grey lighten-3">
-      <span class="white black-text">
-      	<%= form_for [@post, Comment.new], scope: 'comment', remote: true do |f| %>
-      		<%= f.hidden_field :user_id, value: @user.id %>
-					<%= f.text_area :content, placeholder: "Add a comment", class: 'white' %><br/><br/>
-					<%= f.submit 'Comment', :class => 'waves-effect waves-light btn comment', remote: true %>
-				<% end %>
-
-      </span>
-    </div>
-  </div>
-</div>
+<!-- comments -->
 
 <ul class="comments">
   <%= render(partial: 'comments/comment', collection: @post.comments) %>
