markdown and syntax highlighting for posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="post_wrapper">
 	<div class="post_content">
 		<%= post.title %>
-		<%= post.content %>
+		<%= markdown(post.content) %>
 	<div>
 		<small>
 			Posted by
