added ajax username and uniqueness validator

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -17,3 +17,18 @@
 		text-align: center;
 	}
 }
+
+#username_win{
+	display: none;
+}
+
+#username_fail{
+	display: none;
+}
+
+#email_win{
+	display: none;
+}
+#email_fail{
+	display: none;
+}
