--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -12,6 +12,7 @@
           Posted By:
           <% if question.user.deleted_at.nil? %>
             <p><a href="#"><%= link_to "#{question.user.username}", question.user %></a></p>
+            <%= render partial: 'users/user', locals: {user: question.user} %>
           <% else %>
             <p>DELETED</p>
           <% end %>
