markdown with best in place for post edit and create

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
-<li style="padding-left: 4%;" class="comment">
+<li class="comment">
 
   <div class="row">
-    <div class="col s12 m8">
+    <div class="col s10 offset-s1">
       <br>
       <div class="card grey lighten-3">
         <%= link_to "X", post_comment_path(comment.id, comment), method: :delete, class: "waves-effect waves-light chip close delete-comment right", remote: true %>
