--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="post_wrapper">
 	<div class="post_content">
 
-		<%= markdown(### post.title) %>
+		<p style="text-align: center; font-size: 2em; "> <%= post.title %> </p>
 		<%= markdown(post.content) %>
 	<div>
 		<small>
