--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,16 @@
 <div class="row post_wrapper">
-	<div class="col s12 m6">
+	<div class="col s10 offset-s1">
 		<div class="card hoverable">
 			<div class="card-content">
 					<%= render @post %>
+			</div>
+			<div class="row card-panel grey lighten-3">
+      	<%= form_for [@post, Comment.new], scope: 'comment', remote: true do |f| %>
+      		<%= f.hidden_field :user_id, value: @user.id %>
+					<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
+      		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
+					
+				<% end %>
 			</div>
 		</div>
 	</div>
