--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -15,7 +15,7 @@
 				<%= form_with  model: @post do |f| %>
 					<div class="new_post_content">
 						<div class="card-title">
-							<%= f.text_area :title, placeholder: 'Title' %>
+							<%= f.text_field :title, placeholder: 'Title' %>
 						</div>
 					</div>
 					<div class="card-content">
