--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,13 +1,22 @@
 <div class="row answer_show">
-	<div class="answer_content col s12 m6">
-		<div class="card hoverable">
+	<div class="answer_content col s10 offset-s1">
+		<br>
+		<div class="card grey lighten-3">
+			<% if answer.user.id == current_user.id %>
+				<%= link_to "X", answer, method: :delete, remote: true, class: 'answer_delete waves-effect waves-light chip close right'%>
+			<% end %>
+			<div class="card-content white black-text">
+				<span class="card-title">Answer from <%= answer.user.username %></span>
+          <p>
+          	<%= best_in_place_if answer.user.id == current_user.id, answer, :content, :as => :textarea %>
+          </p>
+          <hr>
+          <small class="col s12 m8">
+            Submitted <%= time_ago_in_words(answer.created_at) %> ago
+          </small>
+			</div>	
 			<div class="card-content answer">
-				<%= best_in_place_if answer.user.id == current_user.id, answer, :content, :as => :textarea %>
-				<div>
-					<% if answer.user.id == current_user.id %>
-						<%= link_to "Delete", answer, method: :delete, remote: true, class: 'answer_delete'%>
-					<% end %>	
-				</div>
+				
 			</div>
 		</div>
 	</div>
