--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,2 @@
-$('.comments').append("<%= j render(partial: 'comments/comment', collection: @post.comments) %>");
-$('.comment-input').trigger('reset');
+$('.comments').html("<%= j render(partial: 'comments/comment', collection: @post.comments) %>");
+$('.new_comment').trigger('reset');
