--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,8 +4,11 @@
 			<div class="card-content">
 					<%= render @post %>
 			</div>
+			<ul class="comments">
+  			<%= render(partial: 'comments/comment', collection: @post.comments) %>	
+			</ul>
 			<div class="row card-panel grey lighten-3">
-      	<%= form_for [@post, Comment.new], scope: 'comment', remote: true do |f| %>
+      	<%= form_for [@post, Comment.new], scope: 'comment', remote: true, class: "comment-field" do |f| %>
       		<%= f.hidden_field :user_id, value: @user.id %>
 					<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
       		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
@@ -15,9 +18,3 @@
 		</div>
 	</div>
 </div>
-
-<!-- comments -->
-
-<ul class="comments">
-  <%= render(partial: 'comments/comment', collection: @post.comments) %>
-</ul>
