post index and vote bar styling

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+.index-card	{
+	a:link { 
+	  color: #000000;
+	}
+	a:visited { 
+	  color: #000000;
+	}
+	a:hover { 
+	  color: #000000;
+	}
+	a:active { 
+	  color: #000000;
+	}
+}
+
+
