--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,10 @@
   	<div class="card hoverable">
 			<%= render :partial => "question", :locals => { :question => @question } %>
 			<div class="row card-panel grey lighten-3">
-      	<%= form_for [@question, Comment.new], scope: 'comment', remote: true, class: "comment-field" do |f| %>
+        <ul class="comments">
+          <%= render(partial: 'comments/comment', collection: @question.comments) %>  
+        </ul>
+      	<%= form_for [@question, Comment.new], scope: 'comment', remote: true do |f| %>
       		<%= f.hidden_field :user_id, value: @user.id %>
 					<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
       		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
@@ -22,9 +25,3 @@
 		<%= render answer %>
 	<% end %>
 </div>
-
-
-<ul class="comments">
-  <%= render(partial: 'comments/comment', collection: @question.comments) %>
-</ul>
-
